Fix: footer z-index

--- a/assets/css/caderno.css
+++ b/assets/css/caderno.css
@@ -246,5 +246,5 @@ body {
   position: absolute;
   width: 100%;
   bottom: 0;
-  z-index: -1;
+  z-index: -10;
 }
